// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Output Snapshots > Claude SKILL.md snapshots > should match claude agent snapshot > claude-agent 1`] = `
"<!-- 
  DO NOT EDIT THIS FILE DIRECTLY
  Generated by ai-tool-sync. Edit the source files in .ai/ instead.
-->

# architect

> System architect for high-level design

## Configuration

- **Model:** claude-sonnet-4-20250514
- **Tools:** Read, Search, Glob

## Instructions

# The Architect

You are a system architect focused on high-level design decisions.

## Responsibilities

- Design system architecture
- Review technical decisions
- Ensure scalability and maintainability
"
`;

exports[`Output Snapshots > Claude SKILL.md snapshots > should match claude settings.json snapshot > claude-settings-json 1`] = `
{
  "__generated_by": "ai-tool-sync - DO NOT EDIT DIRECTLY",
  "commands": {
    "deploy": {
      "command": "scripts/deploy.sh",
      "description": "Deploy application to production",
    },
  },
  "hooks": {
    "PreToolUse": [
      {
        "hooks": [],
        "matcher": "Bash(git commit*)",
      },
    ],
  },
}
`;

exports[`Output Snapshots > Claude SKILL.md snapshots > should match claude skill snapshot > claude-skill 1`] = `
"<!-- 
  DO NOT EDIT THIS FILE DIRECTLY
  Generated by ai-tool-sync. Edit the source files in .ai/ instead.
-->

# database

> Database rules for SQL and migrations

**Triggers:** \`**/*.sql\`, \`db/**/*\` | **Priority:** high

# Database Rules

Always validate SQL migrations before applying.

## Guidelines

1. Use transactions for all schema changes
2. Include rollback migrations
3. Test on staging before production

## Examples

\`\`\`sql
BEGIN;
ALTER TABLE users ADD COLUMN email VARCHAR(255);
COMMIT;
\`\`\`
"
`;

exports[`Output Snapshots > Content without headers > should generate clean output without headers > cursor-rule-no-header 1`] = `
"---
description: Database rules for SQL and migrations
globs: **/*.sql, db/**/*
alwaysApply: false
---

# Database Rules

Always validate SQL migrations before applying.

## Guidelines

1. Use transactions for all schema changes
2. Include rollback migrations
3. Test on staging before production

## Examples

\`\`\`sql
BEGIN;
ALTER TABLE users ADD COLUMN email VARCHAR(255);
COMMIT;
\`\`\`
"
`;

exports[`Output Snapshots > Cursor .mdc snapshots > should match cursor always-apply rule snapshot > cursor-always-apply-rule 1`] = `
"<!-- 
  DO NOT EDIT THIS FILE DIRECTLY
  Generated by ai-tool-sync. Edit the source files in .ai/ instead.
-->

---
description: Core project context that applies to all files
alwaysApply: true
---

# Core Context

This is the core project context.
"
`;

exports[`Output Snapshots > Cursor .mdc snapshots > should match cursor command snapshot > cursor-command 1`] = `
"<!-- 
  DO NOT EDIT THIS FILE DIRECTLY
  Generated by ai-tool-sync. Edit the source files in .ai/ instead.
-->

# deploy

> Deploy application to production

## Execute

\`\`\`bash
scripts/deploy.sh
\`\`\`

## Arguments

- **environment** (string) [default: staging]
  Choices: staging, production

# Deploy Command

Deploys the application to the specified environment.

## Usage

Run this command to deploy the application.
"
`;

exports[`Output Snapshots > Cursor .mdc snapshots > should match cursor persona (role) snapshot > cursor-persona-role 1`] = `
"<!-- 
  DO NOT EDIT THIS FILE DIRECTLY
  Generated by ai-tool-sync. Edit the source files in .ai/ instead.
-->

# architect

> System architect for high-level design

## Available Tools

- Read
- Grep
- Glob

# The Architect

You are a system architect focused on high-level design decisions.

## Responsibilities

- Design system architecture
- Review technical decisions
- Ensure scalability and maintainability
"
`;

exports[`Output Snapshots > Cursor .mdc snapshots > should match cursor rule with globs snapshot > cursor-rule-with-globs 1`] = `
"<!-- 
  DO NOT EDIT THIS FILE DIRECTLY
  Generated by ai-tool-sync. Edit the source files in .ai/ instead.
-->

---
description: Database rules for SQL and migrations
globs: **/*.sql, db/**/*
alwaysApply: false
---

# Database Rules

Always validate SQL migrations before applying.

## Guidelines

1. Use transactions for all schema changes
2. Include rollback migrations
3. Test on staging before production

## Examples

\`\`\`sql
BEGIN;
ALTER TABLE users ADD COLUMN email VARCHAR(255);
COMMIT;
\`\`\`
"
`;

exports[`Output Snapshots > Dry run generated content > should include complete generated content in dry run > dry-run-cursor-rule 1`] = `
"<!-- 
  DO NOT EDIT THIS FILE DIRECTLY
  Generated by ai-tool-sync. Edit the source files in .ai/ instead.
-->

---
description: Database rules for SQL and migrations
globs: **/*.sql, db/**/*
alwaysApply: false
---

# Database Rules

Always validate SQL migrations before applying.

## Guidelines

1. Use transactions for all schema changes
2. Include rollback migrations
3. Test on staging before production

## Examples

\`\`\`sql
BEGIN;
ALTER TABLE users ADD COLUMN email VARCHAR(255);
COMMIT;
\`\`\`
"
`;

exports[`Output Snapshots > Entry point snapshots > should match AGENTS.md snapshot (from Cursor) > agents-md-entrypoint-cursor 1`] = `
"<!-- 
  DO NOT EDIT THIS FILE DIRECTLY
  Generated by ai-tool-sync. Edit the source files in .ai/ instead.
-->

# AI Agents

Project: **snapshot-test-project**

## Available Roles

- [architect](.cursor/commands/roles/architect.md) - System architect for high-level design

## Available Commands

- [deploy](.cursor/commands/deploy.md) - Deploy application to production
"
`;

exports[`Output Snapshots > Entry point snapshots > should match AGENTS.md snapshot (from Factory) > agents-md-entrypoint 1`] = `
"<!-- 
  DO NOT EDIT THIS FILE DIRECTLY
  Generated by ai-tool-sync. Edit the source files in .ai/ instead.
-->

# AI Agents

Project: **snapshot-test-project**

## Required Skills

These skills are always loaded:

- [core](.factory/skills/core/SKILL.md) - Core project context that applies to all files

## Available Skills

- [database](.factory/skills/database/SKILL.md) (**/*.sql, db/**/*) - Database rules for SQL and migrations

## Available Droids

- [architect](.factory/droids/architect.md) - System architect for high-level design

## Available Commands

- [deploy](.factory/commands/deploy.md) - Deploy application to production
"
`;

exports[`Output Snapshots > Entry point snapshots > should match CLAUDE.md snapshot > claude-md-entrypoint 1`] = `
"<!-- 
  DO NOT EDIT THIS FILE DIRECTLY
  Generated by ai-tool-sync. Edit the source files in .ai/ instead.
-->

# Claude Code Context

Project: **snapshot-test-project**

## Core Skills (Always Active)

@import .claude/skills/core/SKILL.md

## Context-Aware Skills

The following skills are activated based on file context:

- [database](.claude/skills/database/SKILL.md) (**/*.sql, db/**/*) - Database rules for SQL and migrations

## Available Agents

- [architect](.claude/agents/architect.md) - System architect for high-level design

## Available Commands

- /deploy - Deploy application to production

## Active Hooks

1 hook(s) configured in \`.claude/settings.json\`
"
`;

exports[`Output Snapshots > Factory snapshots > should match factory command snapshot > factory-command 1`] = `
"<!-- 
  DO NOT EDIT THIS FILE DIRECTLY
  Generated by ai-tool-sync. Edit the source files in .ai/ instead.
-->

# deploy

> Deploy application to production

## Execute

\`\`\`bash
scripts/deploy.sh
\`\`\`

## Arguments

- **environment** (string) [default: staging]
  Choices: staging, production

# Deploy Command

Deploys the application to the specified environment.

## Usage

Run this command to deploy the application.
"
`;

exports[`Output Snapshots > Factory snapshots > should match factory droid snapshot > factory-droid 1`] = `
"<!-- 
  DO NOT EDIT THIS FILE DIRECTLY
  Generated by ai-tool-sync. Edit the source files in .ai/ instead.
-->

# architect

> System architect for high-level design

## Configuration

- **Tools:** read, search, glob

## Instructions

# The Architect

You are a system architect focused on high-level design decisions.

## Responsibilities

- Design system architecture
- Review technical decisions
- Ensure scalability and maintainability
"
`;

exports[`Output Snapshots > Factory snapshots > should match factory skill snapshot > factory-skill 1`] = `
"<!-- 
  DO NOT EDIT THIS FILE DIRECTLY
  Generated by ai-tool-sync. Edit the source files in .ai/ instead.
-->

# database

> Database rules for SQL and migrations

**Triggers:** \`**/*.sql\`, \`db/**/*\` | **Priority:** high

# Database Rules

Always validate SQL migrations before applying.

## Guidelines

1. Use transactions for all schema changes
2. Include rollback migrations
3. Test on staging before production

## Examples

\`\`\`sql
BEGIN;
ALTER TABLE users ADD COLUMN email VARCHAR(255);
COMMIT;
\`\`\`
"
`;
